attempt to fix button not showing up on mobile

--- a/src/styles/Time.css
+++ b/src/styles/Time.css
@@ -35,6 +35,10 @@
 	font-size: 50px;
 }
 
+.start-btn {
+	height: 2rem;
+}
+
 @media only screen and (max-width: 1137px) {
 	.current-time,
 	.total-time {
@@ -77,7 +81,8 @@
 		font-size: 25px;
 	}
 	.start-btn {
-		margin-top: 10px;
+		height: 2rem;
+		margin: 20px;
 	}
 	.total-time-label {
 		font-size: 25px;
